--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Arolax HTML5 Template">
+  <meta name="description" content="PT Laju Omega Digital">
 
   <title>LOD Agency</title>
 
@@ -619,9 +619,7 @@
           <div class="container">
             <div class="footer-area-inner section-spacing-top">
               <div class="footer-widget-wrapper">
-                <div class="footer-logo">
-                  <a href="#"><img src="https://crowdytheme.com/html/arolax/assets/imgs/logo/logo-light.png" alt="site-logo"></a>
-                </div>
+                  <img src="assets/images/logo-lod-loading.png" alt="" style="height: 320px;">
               </div>
               <div class="footer-widget-wrapper">
                 <h2 class="title">Service</h2>
